[package]
name = "pinocchio-create-account"
version = "0.1.0"
edition = "2021"

[lib]
crate-type = ["cdylib", "lib"]


[patch.crates-io]
solana-sbpf = { git = "https://github.com/serbangv/sbpf-profiler" }

[dependencies]
pinocchio = "0.9.0"

[dev-dependencies]
mollusk-svm = "0.4.1"
solana-sdk = "2.3.0"
