[package]
name = "profile"
version = "0.1.0"
description = "Created with Anchor"
edition = "2021"

[lib]
crate-type = ["cdylib", "lib"]
name = "profile"

[features]
default = []
cpi = ["no-entrypoint"]
no-entrypoint = []
no-idl = []
no-log-ix-name = []
idl-build = ["anchor-lang/idl-build", "anchor-spl/idl-build"]

[patch.crates-io]
solana-sbpf = { git = "https://github.com/serbangv/sbpf-profiler" }

[dependencies]
anchor-lang = "0.31.1"
anchor-spl = "0.31.1"

[dev-dependencies]
mollusk-svm = "0.3.0"
solana-sdk = "2.3.0"
solana-program-runtime = "=2.3.1"
solana-sbpf = "0.11.1"
solana-program-test = "2.1.0"
tokio = { version = "1", features = ["macros"] }

